syntax = "proto3";

message Alarm {
  string Type = 1;
  string Status = 2;
  string Severity = 3;
  int64 DeviceID = 4;
}

message Device {
  int64 ID = 1;
  string Name = 2;
  string IMEI = 3;
  double Longitude = 4;
  double Latitude = 5;
}

message Measurement {
  string Type = 1;
  double Value = 2;
  string Unit = 3;
  int64 DeviceID = 4;
}

message DeviceFilter {
  string DateFrom = 1;
  string DateTo = 2;
  string Type = 3;
  int64 DeviceID = 4;
}

message Confirmation { int64 reply = 1; }

service MeasurementService {
  rpc CreateMeasurement(Measurement) returns (Confirmation) {}
  rpc CreateMeasurements(stream Measurement) returns (Confirmation) {}
  rpc GetMeasurements(DeviceFilter) returns (stream Measurement) {}
}

service DeviceService {
  rpc CreateDevice(Device) returns (Confirmation) {}
  rpc CreateDevices(stream Device) returns (Confirmation) {}
}

service AlarmService {
  rpc CreateAlarm(Alarm) returns (Confirmation) {}
  rpc CreateAlarms(stream Alarm) returns (Confirmation) {}
  rpc GetAlarms(DeviceFilter) returns (stream Alarm) {}
}